<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <TextView
        style="@style/headerBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/welcome" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:scaleType="centerCrop"
        android:src="@drawable/belfast" />

    <TextView
        android:id="@+id/restaurants"
        style="@style/headerBar2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/restaurants" />

    <TextView
        android:id="@+id/sites"
        style="@style/headerBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/sites" />

    <TextView
        android:id="@+id/family"
        style="@style/headerBar2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/family" />

    <TextView
        android:id="@+id/phrases"
        style="@style/headerBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/phrases" />

</LinearLayout>
